# dotgoblin

./: .gitignore  LICENSE  README.md  pyproject.toml
src/dotgoblin/: __init__.py  cli.py  interpolate.py  runner.py  store.py
