[project]
name = "dotgoblin"
version = "0.0.2"
description = "CLI tool for managing environment variable sets bound to named profiles or working directories."
readme = "README.md"
requires-python = ">=3.13"
license = "MIT"
authors = [{ name = "frizzy" }]
keywords = ["env", "environment", "dotenv", "cli", "secrets"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Environment :: Console",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Operating System :: MacOS",
    "Operating System :: POSIX :: Linux",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.13",
    "Topic :: Software Development :: Build Tools",
    "Topic :: Utilities",
]
dependencies = [
    "click>=8.1",
    "tomli-w>=1.0",
]

[project.urls]
Homepage = "https://github.com/frizzy/dotgoblin"
Repository = "https://github.com/frizzy/dotgoblin"
Issues = "https://github.com/frizzy/dotgoblin/issues"

[project.scripts]
dotgoblin = "dotgoblin.cli:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/dotgoblin"]
